# iceberg

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  main.rs  panels.rs  viewer.rs
