[workspace]
resolver = "2"
members = ["crates/*"]

# These two lines keep every crate on the SAME gpui commit
[workspace.dependencies]
gpui = { git = "https://github.com/huacnlee/zed.git" }
hex = "0.4"
memmap2 = "0.9"
capstone = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
